--- a/templates/mobile/profiles/detail.html
+++ b/templates/mobile/profiles/detail.html
@@ -43,7 +43,7 @@ style="background: url({{ profile.get_background_url() }}) no-repeat center cent
 
                 <!-- <td> -->
                 <!-- <a href="{{ profile.sidebar.img_links[i].link_url }}"> -->
-                    <!-- <img class="centered" style="max-height: 50px;" src="{{ profile.sidebar.img_links[i].img_url }}"> -->
+                    <!-- <img class="centered" style="max-height: 50px;" src="{{ profile.sidebar.img_links[i].get_image_url() }}"> -->
                 <!-- </a> -->
                 <!-- </td> -->
 
