--- a/templates/profiles/detail.html
+++ b/templates/profiles/detail.html
@@ -29,6 +29,7 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
 {% endblock %}
 
 <div class="container container-fluid content-box-2">
+  <div class="col-xs-12" id="error-msg"></div>
   <div class="row"> <!-- row -->
     <!-- sidebar -->
     {%- block sidebar -%}
@@ -55,19 +56,12 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
       {{ content.render_header(profile.header, false) }}
       {%- endblock -%}
 
-      <div class="col-xs-12 fill-transparent hr"></div>
+      <!-- <div class="col-xs-12 fill-transparent hr"></div> -->
+      <div class="col-xs-12 fill-solid hr"></div>
       <!-- END header -->
 
       <!-- child container -->
       <div class="col-xs-12 fill-solid rounded" id="inner_container">
-
-        <!-- notes -->
-        {%- block notes -%}
-        {% if profile.notes.is_renderable() %}
-        {{ content.render_notes(profile.notes, false) }}
-        {% endif %}
-        {%- endblock -%}
-        <!-- END notes -->
 
         <!-- description-->
         {%- block description -%}
@@ -142,12 +136,18 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
 </div> <!-- END blueimp -->
 
 {%- block modals -%}
+<div id="modals">
+</div>
+{% endblock %}
+
+{%- block popovers -%}
 {% endblock %}
 
 {% endblock %} <!-- END block content -->
 
 {% block scripts %}
 {{ super() }}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.0/masonry.pkgd.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js"></script>
 
 <script>
@@ -162,8 +162,18 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
       ]
     }
   });
+
+// init Masonry
+var $container = $('.masonry-container');
+$container.imagesLoaded( function () {
+  $container.masonry({
+    columnWidth: '.item',
+    itemSelector: '.item'
+  });   
+});
 </script>
 <script src={{ url_for('static', filename='js/blueimp-gallery.min.js') }} type="text/javascript"></script>
+
 <script>
 //document.getElementById('links').onclick = function (event) {
 $('.gallery-links').on('click', function (event) {
@@ -172,9 +182,10 @@ var target = event.target || event.srcElement,
     link = target.src ? target.parentNode : target,
     options = {index: link, event: event},
     links = this.getElementsByTagName('a');
-blueimp.Gallery(links, options);
+    blueimp.Gallery(links, options);
 });
 
 $('.collapse').collapse();
+$('#collapse0').collapse('show');
 </script>
 {% endblock %}
