--- a/templates/users/controlpanel.html
+++ b/templates/users/controlpanel.html
@@ -26,7 +26,7 @@ refurence
       <div class="col-xs-12 fill hr"></div>
 
       <div class="col-xs-12" id="profile-list">
-        {{ macros.render_profile_list(profiles) }}
+        {{ macros.render_profile_list(profiles, maximum_profiles) }}
       </div>
 
       <div class="col-xs-12 fill hr"></div>
@@ -57,7 +57,6 @@ refurence
 <script type=text/javascript>
 function loadJS() {
     $('button#btn-create-refurence').on('click', function() {
-        console.log("CREATE REF");
         var profile_input = $('#input-create-refurence');
         Sijax.request('create_new_refurence', [ {'name': profile_input.val()} ]);
         profile_input.val('');
